# nonebot_plugin_animeres

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
nonebot_plugin_animeres/: __init__.py  cartoon.py  config.py  functions.py  internal.py  schemas.py  utils.py
nonebot_plugin_animeres/resources/: __init__.py  anoneko.py  dongmanhuayuan.py  myheartsite.py
tests/: test_resources_site.py  test_search.py
