[tool.poetry]
name = "nonebot-plugin-animeres"
version = "1.0.0"
description = "动漫资源获取插件"
authors = ["MelodyKnit <2711402357@qq.com>"]
readme = "README.md"
license = "GPL-2.0"
packages = [{include = "nonebot_plugin_animeres"}]
keywords = ["nonebot", "nonebot2", "animeres", "anime"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0rc1", extras = ["fastapi"] }
httpx = "^0.24.1"
lxml = "^4.9.2"
nonebot-adapter-onebot = { version = "^2.2.3", optional = true }

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
