[tool.poetry]
name = "nonebot-plugin-animeres"
version = "1.0.1"
description = "动漫资源获取插件"
authors = ["MelodyKnit <2711402357@qq.com>"]
readme = "README.md"
license = "GPL-2.0"
packages = [{include = "nonebot_plugin_animeres"}]
keywords = ["nonebot", "nonebot2", "animeres", "anime"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"
fake-useragent = "^1.1.3"
httpx = ">=0.20.0,<1.0.0"
nonebot2 = { version = "^2.0.0rc1", extras = ["fastapi"] }
nonebot-adapter-onebot = { version = "^2.2.3", optional = true }

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
flake8 = "^4.0.1"
pre-commit = "^3.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
