[tool.poetry]
name = "nonebot-plugin-animeres"
version = "1.0.6"
description = "动漫资源获取插件"
authors = ["MelodyKnit <2711402357@qq.com>"]
readme = "README.md"
license = "GPL-2.0"
packages = [{include = "nonebot_plugin_animeres"}]
keywords = ["nonebot", "nonebot2", "animeres", "anime"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"
fake-useragent = "^2.0.3"
httpx = ">=0.26.0,<1.0.0"
nonebot2 = "^2.4.1"
nonebot-adapter-onebot = { version = "^2.2.3", optional = true }

[tool.poetry.group.dev.dependencies]
pycln = "^2.1.2"
isort = "^5.10.1"
black = "^23.1.0"
flake8 = "^4.0.1"
pre-commit = "^3.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
